--- a/01_début-html/début_html.adoc
+++ b/01_début-html/début_html.adoc
@@ -1,5 +1,9 @@
 = Début de HTML
 
+Basé sur cette vidéo: video::qsbkZ7gIKnc[youtube]
+
+https://github.com/cheroliv/html-css-codebase/tree/master/01_d%C3%A9but-html[repository]
+
 == Code source memo
 
 index.html
@@ -149,3 +153,5 @@ index.html
 
 </html>
 ----
+
+//[[toc]] [[next section]]
