--- a/02_début-css/début_css.adoc
+++ b/02_début-css/début_css.adoc
@@ -1,5 +1,8 @@
 = Introduction à CSS3
 
+Basé sur cette vidéo: video::iSWjmVcfQGg[youtube]
+https://github.com/cheroliv/html-css-codebase/tree/master/01_d%C3%A9but-css[repository]
+
 == Table des matieres
 
 * Début CSS
@@ -13,4 +16,6 @@
 . Position absolute
 . Le responsive
 . Débug & Conclusion
+
+//[[next section]] [[toc]] [[next section]]
 
