--- a/01_début-html/début_html.adoc
+++ b/01_début-html/début_html.adoc
@@ -2,7 +2,7 @@
 
 Basé sur cette vidéo: https://youtu.be/qsbkZ7gIKnc[Apprendre HTML de zéro]
 
-https://github.com/cheroliv/html-css-codebase/tree/master/01_d%C3%A9but-html[repository]
+https://github.com/cheroliv/html-css-codebase/tree/master/01_d%C3%A9but-html[github repository]
 
 == Code source memo
 
