--- a/01_début-html/début_html.adoc
+++ b/01_début-html/début_html.adoc
@@ -1,6 +1,15 @@
 = Début de HTML
 
+
+<<document2#adoc-ma-section,Ma Section dans le Document 2>>
+
 Basé sur cette vidéo: https://youtu.be/qsbkZ7gIKnc[Apprendre HTML de zéro]
+
+
+
+[#adoc-ma-section]
+== Ma Section
+
 
 https://github.com/cheroliv/html-css-codebase/tree/master/01_d%C3%A9but-html[github repository]
 
