--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 = Introduction à HTML & CSS3
-ifdef::env-name[:relfilesuffix: .adoc]
+// ifdef::env-name[:relfilesuffix: .adoc]
 
 == Table des matieres
 
