--- a/README.adoc
+++ b/README.adoc
@@ -8,4 +8,14 @@ https://cheroliv.github.io/blog/2023/0062_memo_css_post.html[Mémo css, window =
 
 * link:01_début-html/début_html.adoc#début_html[Début HTML]
 * link:02_début-css/début_css.adoc#début_css[Début CSS]
-* link:03_intermediaire-html-css/intermediaire-html-css.adoc#début_intermediaire-html-css[Intermédiaire HTML & CSS]
+* link:03_css3-sass-scss/css3-sass-scss.adoc#css_sass_scss[Css3, Sass et Scss]
+* link:04_intermediaire-html-css/intermediaire-html-css.adoc#début_intermediaire-html-css[Intermédiaire HTML & CSS]
+
+* CSS Grid & Flexbox for Responsive Layouts, v2
+
+* Dynamic CSS with Custom Properties
+
+* CSS Animations and Transitions
+
+
+
